增加文章数据库模型

--- a/blogs/application/admin/view/software/add.html
+++ b/blogs/application/admin/view/software/add.html
@@ -1,7 +1,7 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label  class="control-label col-xs-12 col-sm-2">{:__('图片名称')}:</label>
+        <label  class="control-label col-xs-12 col-sm-2">{:__('名称')}:</label>
         <div class="col-xs-12 col-sm-8">
             {:Form::text('row[name]', '', ['data-rule'=>'required'])}
         </div>
