--- a/blogs/application/admin/view/blogroll/add.html
+++ b/blogs/application/admin/view/blogroll/add.html
@@ -1,18 +1,12 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label  class="control-label col-xs-12 col-sm-2">{:__('图片名称')}:</label>
+        <label  class="control-label col-xs-12 col-sm-2">{:__('名称')}:</label>
         <div class="col-xs-12 col-sm-8">
             {:Form::text('row[name]', '', ['data-rule'=>'required'])}
         </div>
     </div>
 
-    <div class="form-group">
-        <label  class="control-label col-xs-12 col-sm-2">{:__('图片')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:Form::image('row[url]','', ['data-rule'=>'required'])}
-        </div>
-    </div>
     <div class="form-group">
         <label  class="control-label col-xs-12 col-sm-2">{:__('链接地址')}:</label>
         <div class="col-xs-12 col-sm-8">
