--- a/blogs/application/admin/view/blogroll/edit.html
+++ b/blogs/application/admin/view/blogroll/edit.html
@@ -1,28 +1,22 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label  class="control-label col-xs-12 col-sm-2">{:__('图片名称')}:</label>
+        <label  class="control-label col-xs-12 col-sm-2">{:__('名称')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:Form::text('row[name]', '', ['data-rule'=>'required'])}
+            {:Form::text('row[name]', $row['name'], ['data-rule'=>'required'])}
         </div>
     </div>
 
     <div class="form-group">
-        <label  class="control-label col-xs-12 col-sm-2">{:__('图片')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:Form::image('row[url]','', ['data-rule'=>'required'])}
-        </div>
-    </div>
-    <div class="form-group">
         <label  class="control-label col-xs-12 col-sm-2">{:__('链接地址')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:Form::text('row[link_url]','', ['data-rule'=>''])}
+            {:Form::text('row[link_url]',$row['link_url'], ['data-rule'=>''])}
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')], '')}
+            {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')], $row['status'])}
         </div>
     </div>
 
