--- a/blogs/application/admin/view/slide/edit.html
+++ b/blogs/application/admin/view/slide/edit.html
@@ -14,6 +14,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label  class="control-label col-xs-12 col-sm-2">{:__('链接地址')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            {:Form::text('row[link_url]',$row['link_url'], ['data-rule'=>''])}
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
             {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')], $row['status'])}
