--- a/blogs/application/index/view/common/meta.html
+++ b/blogs/application/index/view/common/meta.html
@@ -1,19 +1,22 @@
 <meta charset="utf-8">
-<title>{$title|default=''} – {:__('The fastest framework based on ThinkPHP5 and Bootstrap')}</title>
+<title>{$title|default=''} – {:__('99羊毛')}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
 
 {if isset($keywords)}
 <meta name="keywords" content="{$keywords}">
+{else /}
+<meta name="keywords" content="99羊毛社区">
 {/if}
+
 {if isset($description)}
 <meta name="description" content="{$description}">
+{else /}
+<meta name="description" content="99羊毛网提供最新最好的褥羊毛博客信息，让大家能在空闲时间多赚一些外快">
 {/if}
-<meta name="author" content="FastAdmin">
 
-<link rel="shortcut icon" href="__CDN__/assets/img/favicon.ico" />
 
-<link href="__CDN__/assets/css/frontend{$Think.config.app_debug?'':'.min'}.css?v={$Think.config.site.version}" rel="stylesheet">
+
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
 <!--[if lt IE 9]>
