--- a/blogs/application/index/view/common/script.html
+++ b/blogs/application/index/view/common/script.html
@@ -1,1 +1,3 @@
 <script src="__CDN__/assets/js/require{$Think.config.app_debug?'':'.min'}.js" data-main="__CDN__/assets/js/require-frontend{$Think.config.app_debug?'':'.min'}.js?v={$site.version|htmlentities}"></script>
+<script src="/assets/pc/plugin/layui/layui.js"></script>
+<script src="/assets/pc/js/common.js"></script>
