--- a/blogs/application/index/view/article/detail.html
+++ b/blogs/application/index/view/article/detail.html
@@ -107,89 +107,8 @@
 
     </div>
 
-    <!--右边-->
-    <div class="layui-col-md4">
 
-      <!--重点项目-->
-      <div class="fly-panel">
-        <h3 class="fly-panel-title">重点推荐</h3>
-        <ul class="fly-panel-main fly-list-static">
-          <li>
-            <a href="#" >layui 的 GitHub 及 Gitee (码云) 仓库，欢迎Star</a>
-          </li>
-          <li>
-            <a href="#" >
-              layui 常见问题的处理和实用干货集锦
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <!--广告-->
-      <div class="fly-panel">
-        <div class="fly-panel-title">
-          赞助商
-          <span class="fly-mid"></span>
-          <a href="" class="fly-link fly-joinad">我要加入</a>
-        </div>
-
-        <div class="fly-panel-main">
-          <a href="#"  class="fly-zanzhu fly-ad-rg">
-            广告位
-          </a>
-        </div>
-      </div>
-
-      <!--热门软件-->
-      <div class="fly-panel fly-rank fly-rank-reply">
-        <h3 class="fly-panel-title fly-clear">
-          <span class="fly-left">热门软件</span>
-          <a href="software.html" class="fly-right">更多</a>
-        </h3>
-        <dl>
-          <dd>
-            <a href="software.html">
-              <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><i>趣头条</i>
-            </a>
-          </dd>
-          <dd>
-            <a href="software.html">
-              <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><i>趣头条</i>
-            </a>
-          </dd>
-          <dd>
-            <a href="software.html">
-              <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><i>趣头条</i>
-            </a>
-          </dd>
-          <dd>
-            <a href="software.html">
-              <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><i>趣头条</i>
-            </a>
-          </dd>
-        </dl>
-      </div>
-
-      <!--友情链接-->
-      <div class="fly-panel fly-link">
-        <h3 class="fly-panel-title">友情链接</h3>
-        <dl class="fly-panel-main">
-          <dd><a href="#" >layui</a></dd>
-          <dd><a href="#" >护肤网</a></dd>
-          <dd><a href="#" >水果网</a></dd>
-          <dd><a href="#" >淘宝</a></dd>
-          <dd><a href="#"  class="fly-link">申请友链</a></dd>
-        </dl>
-      </div>
-
-      <!--粉丝群-->
-      <div class="fly-panel fly-us-code" style="">
-        <img src="../../images/test/pay.jpg" alt="99羊毛">
-        <p>QQ 扫码加入 99羊毛官方群</p>
-      </div>
-
-    </div>
-
+    {include file="common/right" /}
   </div>
 
 </div>
