--- a/blogs/application/index/view/layout/index_default.html
+++ b/blogs/application/index/view/layout/index_default.html
@@ -29,34 +29,35 @@
         <!--登录窗口-->
         <ul class="layui-nav fly-nav-user">
 
+            {notempty name="user"}
+            <li class="layui-nav-item">
+                <a class="fly-nav-avatar" href="javascript:;">
+                    <cite class="layui-hide-xs">{$user}</cite>
+                    <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+                </a>
+                <dl class="layui-nav-child">
+                    <dd><a href="user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
+                    <dd><a href="user/collect.html"><i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的收藏</a></dd>
+                    <hr style="margin: 5px 0;">
+                    <dd><a href="index.html" style="text-align: center;">退出</a></dd>
+                </dl>
+            </li>
+            {else/}
             <!-- 未登录的状态 -->
             <li class="layui-nav-item">
-                <a class="iconfont icon-touxiang layui-hide-xs" href="user/login.html"></a>
+                <a class="iconfont icon-touxiang layui-hide-xs" href="{:url('index/user/login.html')}"></a>
             </li>
             <li class="layui-nav-item">
-                <a href="index/user/login">登录</a>
+                <a href="{:url('index/user/login')}">登录</a>
             </li>
             <li class="layui-nav-item">
-                <a href="index/user/register">注册</a>
+                <a href="{:url('index/user/register')}">注册</a>
             </li>
             <li class="layui-nav-item layui-hide-xs">
                 <a title="QQ登录" class="iconfont icon-qq"></a>
             </li>
+            {/notempty}
 
-            <!-- 登录后的状态 -->
-            <!--
-             <li class="layui-nav-item">
-              <a class="fly-nav-avatar" href="javascript:;">
-                <cite class="layui-hide-xs">贤心</cite>
-                <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-              </a>
-              <dl class="layui-nav-child">
-                <dd><a href="user/set.html"><i class="layui-icon">&#xe620;</i>基本设置</a></dd>
-                <dd><a href="user/collect.html"><i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的收藏</a></dd>
-                <hr style="margin: 5px 0;">
-                <dd><a href="index.html" style="text-align: center;">退出</a></dd>
-              </dl>
-            </li>-->
 
         </ul>
     </div>
