--- a/blogs/application/index/view/user/register.html
+++ b/blogs/application/index/view/user/register.html
@@ -10,6 +10,7 @@
                 <div class="layui-tab-item layui-show">
                     <div class="layui-form layui-form-pane">
                         <form method="post">
+                            {:token()}
                             <div class="layui-form-item">
                                 <label class="layui-form-label">用户名称</label>
                                 <div class="layui-input-inline">
