--- a/blogs/application/index/view/user/set.html
+++ b/blogs/application/index/view/user/set.html
@@ -64,13 +64,13 @@
           <div class="layui-form-item">
             <label class="layui-form-label">当前密码</label>
             <div class="layui-input-inline">
-              <input type="password" name="nowpass" autocomplete="off" class="layui-input">
+              <input type="password" name="oldpassword" autocomplete="off" class="layui-input">
             </div>
           </div>
           <div class="layui-form-item">
             <label class="layui-form-label">新密码</label>
             <div class="layui-input-inline">
-              <input type="password"  name="pass" autocomplete="off" placeholder="6到16个字符" class="layui-input">
+              <input type="password"  name="newpassword" autocomplete="off" placeholder="6到16个字符" class="layui-input">
             </div>
           </div>
           <div class="layui-form-item">
